# clifspipe

./: LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: astrometry-checkpoint.py  cube-checkpoint.py  dap-checkpoint.py  galaxy-checkpoint.py  pipeline-checkpoint.py  pyproject-checkpoint.toml
src/clifspipe/: cube.py  multiwav.py  plotting.py  utils.py
src/clifspipe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/clifspipe.egg-info/.ipynb_checkpoints/: SOURCES-checkpoint.txt
src/clifspy/: .clifspipe.py.swp  .cube.py.swp  .derived_products.py.swp  .galaxy.py.swp  .multiwav.py.swp  clifspipe.py  cube.py  dap.py  derived_products.py  galaxy.py  multiwav.py  plotting.py  spectral_stacking.py  test.py  utils.py
src/clifspy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/clifspy.egg-info/.ipynb_checkpoints/: requires-checkpoint.txt  top_level-checkpoint.txt
src/clifspy/.ipynb_checkpoints/: clifspipe-checkpoint.py  cube-checkpoint.py
